# AxiomRT-

./: .gitignore  AXIOMapp.md  AxiomRT v1.5.md  AxiomRT v1.6.md  AxiomRTos.md  AxiomrtFull Completion Mode.md  Cargo.toml  Full Completion Mode.md  Fulltask.md  Project Description.md  README.md  axiomFX.md  install.sh
.cargo/: config.toml
.github/workflows/: clippy.yml  coq.yml  qemu.yml  release.yml  verify.yml
docs/: 00_PROJECT_CHARTER.md  01_SCOPE_AND_NON_GOALS.md  02_KERNEL_BLUEPRINT.md  03_KERNEL_OBJECTS.md  04_SYSCALL_MODEL.md  05_MEMORY_MODEL.md  06_CAPABILITY_MODEL.md  06_FAULT_MODEL.md  07_CODEX_RULES.md  08_IPC_MODEL.md  08_PHASE_0_GATE.md  09_BUILD_AND_BOOT.md  09_SCHEDULER_MODEL.md  10_TRAP_MODEL.md  10_USER_MODE.md  11_RUNTIME_MONITORING.md  11_VERIFICATION_PLAN.md  12_MMU_SV39.md  13_DISPATCH.md  14_TEST_STRATEGY.md  15_TIMER_PREEMPTION.md  16_WATCHDOG.md  17_IPC_ONTARGET.md  18_CAP_ONTARGET.md  19_SUPERVISOR_ONTARGET.md  20_FULL_DEMO.md  20_REAL_OS_PRODUCT_DEFINITION.md  21_EVENT_FORMAT.md  23_AXIOMCTL_CLI.md  24_STUDIO.md  25_OS_BOOT_FLOW.md  26_SHELL.md  27_APPLICATION_MODEL.md  28_READONLY_FILESYSTEM_SERVICE.md  29_STORAGE_SERVICE.md  30_VIRTIO_BLOCK_INVESTIGATION.md  31_USER_SPACE_DRIVER_FRAMEWORK.md  32_RESTRICTED_APP_IMAGE_FORMAT.md  33_STORAGE_BACKED_FS.md  DEMO_SCENARIO.md  (+2 more)
evidence/v0.1/: AxiomRT_v0.1_Demo_Transcript.md  AxiomRT_v0.1_Final_Report.md  coq_version.txt  git_commit.txt  git_history.txt  qemu_version.txt
evidence/v0.2/: AxiomRT_v0.2_Report.md  git_commit.txt
evidence/v0.3/: AxiomRT_v0.3_Report.md  git_commit.txt
evidence/v0.4/: git_commit.txt
evidence/v0.5/: git_commit.txt
evidence/v0.6/: git_commit.txt
evidence/v0.7/: git_commit.txt
evidence/v0.8/: git_commit.txt
evidence/v0.9/: git_commit.txt
evidence/v1.1/: REPORT.md  tool_versions.txt
evidence/v1.2/: REPORT.md  tool_versions.txt
evidence/v1.3/: REPORT.md  tool_versions.txt
evidence/v1.4/: REPORT.md  tool_versions.txt
evidence/v1.5/: REPORT.md
evidence/v1.6/: REPORT.md  tool_versions.txt
examples/fault_containment_demo/: README.md
kernel/: Cargo.toml  linker.ld
kernel/src/: lib.rs  main.rs  panic.rs
kernel/src/arch/riscv64/: boot.S  cap_demo.rs  context.rs  demo_full.rs  dispatch.rs  ipc_demo.rs  multitask.rs  os_boot.rs  paging.rs  paging_hw.rs  preempt.rs  supervisor_demo.rs  sv39.rs  timer.rs  trap.S  trap.rs  uart.rs  user_entry.S  watchdog_demo.rs
kernel/src/caps/: capability.rs  mod.rs  rights.rs  table.rs
kernel/src/device/: mod.rs
kernel/src/fault/: event.rs  mod.rs  wire.rs
kernel/src/ipc/: endpoint.rs  message.rs  mod.rs
kernel/src/loader/: mod.rs
kernel/src/memory/: address.rs  frame.rs  mod.rs  pagetable.rs
kernel/src/monitor/: event.rs  mod.rs  serial.rs
kernel/src/sched/: mod.rs  priority.rs  queue.rs
kernel/src/syscall/: mod.rs
kernel/src/thread/: context.rs  id.rs  mod.rs  state.rs
kernel/src/user/: image.rs  mod.rs
kit/: ASSUMPTIONS_OF_USE.md  FINAL_REPORT.md  LIMITATIONS.md  SAFETY_CONCEPT.md  SECURITY_CONCEPT.md  TEST_REPORT.md  VERIFICATION_REPORT.md
proofs/: README.md
proofs/coq/: CapabilityAccess.v  MemoryIsolation.v  SchedulerPriority.v
scripts/: build_eval_kit.sh  run_qemu.sh  verify_all.sh
studio/: Cargo.toml
studio/src/: main.rs  page.html
tests/: app_loader_qemu_test.sh  boot_smoke_test.sh  capability_qemu_test.sh  capability_tests.rs  driver_framework_qemu_test.sh  full_fault_containment_demo_qemu_test.sh  ipc_capability_tests.rs  ipc_rendezvous_qemu_test.sh  ipc_tests.rs  memory_isolation_qemu_test.sh  os_shell_qemu_test.sh  readonly_fs_qemu_test.sh  restricted_loader_qemu_test.sh  scheduler_tests.rs  storage_service_qemu_test.sh  supervisor_qemu_test.sh  timer_preemption_qemu_test.sh  two_task_qemu_test.sh  watchdog_qemu_test.sh
tools/axiomctl/: Cargo.toml
tools/axiomctl/src/: events.rs  lib.rs  main.rs
userland/supervisor/: Cargo.toml
userland/supervisor/src/: lib.rs
