[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
description = "AxiomRT microkernel: formally specified safety runtime for RISC-V 64"

# Zero external dependencies (docs/07_CODEX_RULES.md §7).
[dependencies]

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

# Host-run integration test suites live in the repository-level tests/
# directory (docs/14_TEST_STRATEGY.md). Run with an explicit host target:
#   cargo test --target x86_64-unknown-linux-gnu -p kernel
[[test]]
name = "scheduler_tests"
path = "../tests/scheduler_tests.rs"

[[test]]
name = "ipc_tests"
path = "../tests/ipc_tests.rs"

[[test]]
name = "capability_tests"
path = "../tests/capability_tests.rs"
