[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
description = "AxiomRT microkernel: formally specified safety runtime for RISC-V 64"

# Zero external dependencies (docs/07_CODEX_RULES.md §7).
[dependencies]

# Memory-isolation demo probe selection for the QEMU negative tests
# (AXIOM-MEMHW-010/011). Default (no feature) = user reads kernel memory.
# These features only change the demo user task's forbidden access; they
# never weaken a check (docs/12_MMU_SV39.md §7).
[features]
default = []
isolation_write_unmapped = []
isolation_exec_nonexec = []
# Two-task cooperative dispatch demo (AXIOM-SCHEDRT, v0.3). Off by
# default so the default build stays the v0.2 memory-isolation demo.
demo_multitask = []
# Timer preemption demo (AXIOM-TIMER, v0.4). Off by default.
demo_preempt = []
# Watchdog / CPU-exhaustion demo (AXIOM-WDOG, v0.5). Off by default.
demo_watchdog = []
# On-target IPC rendezvous demo (AXIOM-IPCRT, v0.6). Off by default.
demo_ipc = []
# On-target capability enforcement demo (AXIOM-CAPRT, v0.7). Off by default.
demo_cap = []
# On-target supervisor + logger fault-recovery demo (AXIOM-SUPRT, v0.8).
demo_supervisor = []
# Full four-task fault-containment demo (AXIOM-DEMO, v0.9). Off by default.
demo_full = []
os_boot = []

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

# Host-run integration test suites live in the repository-level tests/
# directory (docs/14_TEST_STRATEGY.md). Run with an explicit host target:
#   cargo test --target x86_64-unknown-linux-gnu -p kernel
[[test]]
name = "scheduler_tests"
path = "../tests/scheduler_tests.rs"

[[test]]
name = "ipc_tests"
path = "../tests/ipc_tests.rs"

[[test]]
name = "capability_tests"
path = "../tests/capability_tests.rs"

[[test]]
name = "ipc_capability_tests"
path = "../tests/ipc_capability_tests.rs"
